Updated the demo to support payment intents.

--- a/example-app/templates/charge.html
+++ b/example-app/templates/charge.html
@@ -22,7 +22,7 @@
                     <h1 class="title">Thank you!</h1>
                     <br>
                     <h2 class="subtitle">We are processing your order now. You should receive an email confirmation soon.</h2>
-                    <h2 class="subtitle">Also, track your payment via the interactive Google Data Studio report.</h2>
+                    <h2 class="subtitle">In this demo, you may also track your payment via the interactive Google Data Studio report.</h2>
                 </div>
             </div>
             <div class="hero-foot"></div>
